--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -15,13 +15,16 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
+                    <a href="/members">Narystė</a>
+                </li>
+                <li>
                     <a href="/legal">Teisinė informacija</a>
                 </li>
                 <li>
                     <a href="/contact">Kontaktai</a>
                 </li>
                 <li>
-                    <a href="https://blog.openmap.lt/">Tinklaraštis</a>
+                    <a href="https://blog.openmap.lt/" target="_blank">Tinklaraštis</a>
                 </li>
             </ul>
         </div>
