--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -14,8 +14,12 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <a href="/members">Narystė</a>
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Narystė<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/members">Apie</a></li>
+                        <li><a href="/members/request.html">Prašymas įstoti</a></li>
+                    </ul>
                 </li>
                 <li>
                     <a href="/legal">Teisinė informacija</a>
