smulkūs paramos puslapio pataisymai

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -21,6 +21,9 @@
                     </ul>
                 </li>
                 <li>
+                    <a href="/support/gpm_support.html">Parama</a>
+                </li>
+                <li>
                     <a href="/legal">Teisinė informacija</a>
                 </li>
                 <li>
