Google Tag Manager integracija

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,10 @@
 <html lang="lt">
 {% include head.html %}
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NP4W837"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
     {% include navigation.html %}
     {% include carousel.html %}
     <!-- Page Content -->
