--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,11 @@
 <head>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-NP4W837');</script>
+<!-- End Google Tag Manager -->
     {% comment %}Use a different value if site structure changes {% endcomment %}
     {% assign url_base = '' %}
     <meta charset="utf-8">
