--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -26,6 +26,12 @@
                 <li>
                     <a href="/legal">Teisinė informacija</a>
                 </li>
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Ataskaitos<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/report/2017">2017 metai</a></li>
+                    </ul>
+                </li>
                 <li>
                     <a href="/contact">Kontaktai</a>
                 </li>
