--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -29,6 +29,7 @@
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Ataskaitos<span class="caret"></span></a>
                     <ul class="dropdown-menu">
+                        <li><a href="/report/2019">2019 metai</a></li>
                         <li><a href="/report/2018">2018 metai</a></li>
                         <li><a href="/report/2017">2017 metai</a></li>
                     </ul>
