--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -29,6 +29,7 @@
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Ataskaitos<span class="caret"></span></a>
                     <ul class="dropdown-menu">
+                        <li><a href="/report/2023">2023 metai</a></li>
                         <li><a href="/report/2022">2022 metai</a></li>
                         <li><a href="/report/2021">2021 metai</a></li>
                         <li><a href="/report/2020">2020 metai</a></li>
